--- a/web/css/index.css
+++ b/web/css/index.css
@@ -68,6 +68,7 @@ a {
 .info_box{max-width:50%; height: 100%; float:left; padding-top:0.2rem;}
 .info_box span{ color:#aaa; padding-right:0.2rem; font-size:1rem; }
 .platform_wrapper .down_btn{ float:right; width:5rem; height:2.6rem; margin:1.4rem 0; font-size:1.2rem;  border:0.12rem solid #0076cc; border-radius:0.4rem; outline:none;  background:#fff; color:#0076cc; text-align:center; line-height:2.6rem;}
+.link_btn{ float:right; width:2rem; height:2.6rem; margin:1.4rem 0; font-size:1.2rem;  border:0.12rem solid #0076cc; border-radius:0.4rem; outline:none;  background:#fff; color:#0076cc; text-align:center; line-height:2.6rem;}
 
 .all_version{ height:0;  margin:0.8rem 0.3rem; margin-bottom:0rem;  display:block;  overflow:hidden;}
 .show_version{ height:auto;}
